# IronMic

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  ENTERPRISE.md  README.md  SECURITY.md
.github/workflows/: ci.yml  release.yml  upload-models.yml
electron-app/: electron-builder.config.js  package-lock.json  package.json
electron-app/src/main/: index.ts  ipc-handlers.ts  live-summarizer.ts  meeting-app-detector.ts  meeting-notes-collab-client.ts  meeting-notes-collab-server.ts  meeting-recorder.ts  meeting-room-client.ts  meeting-room-server.ts  model-downloader.ts  native-bridge.ts
electron-app/src/main/ai/: AIManager.ts  ClaudeAdapter.ts  CopilotAdapter.test.ts  CopilotAdapter.ts  LlmSubprocess.ts  LocalLLMAdapter.ts  copilot-catalog.ts  types.ts
electron-app/src/main/rag/: QAOrchestrator.ts  promptBuilder.test.ts  promptBuilder.ts
electron-app/src/main/utils/: copilot-probe-log.ts  shell-env.ts  spawn-portable.ts
electron-app/src/preload/: index.ts
electron-app/src/renderer/: index.html  main.tsx
electron-app/src/renderer/components/: AIChat.tsx  AnalyticsPage.tsx  DictatePage.tsx  EntryCard.tsx  InputSettings.tsx  InviteDetailsPanel.tsx  Layout.tsx  ListenPage.tsx  LogsPage.tsx  MeetingCollaboratePanel.tsx  MeetingDetailPage.tsx  MeetingPage.tsx  MeetingRoomPanel.tsx  MeetingSessionCard.tsx  MeetingTemplateEditor.tsx  MeetingTranscriptPanel.tsx  ModelImportBanner.tsx  ModelManager.tsx  NoteEditor.tsx  NotePickerModal.tsx  NotesCollaborateModal.tsx  NotesPage.tsx  NotesSidebar.tsx  NotificationBell.tsx  NotificationPanel.tsx  PendingEntryCard.tsx  RecordingIndicator.tsx  SearchBar.tsx  SearchPage.tsx  SettingsPanel.tsx  ShareMenu.tsx  Timeline.tsx  Toast.tsx  WelcomePage.tsx
electron-app/src/renderer/components/ai-chat/: AIChatHistoryDrawer.tsx
electron-app/src/renderer/components/ui/: EmptyState.tsx  PageHeader.tsx  index.ts
electron-app/src/renderer/components/voice-chat/: VoiceChatOverlay.tsx
electron-app/src/renderer/hooks/: useRustBridge.ts
electron-app/src/renderer/services/: ActionRouter.ts  LogCapture.ts
electron-app/src/renderer/services/meeting/: SummaryGenerator.ts
electron-app/src/renderer/services/rag/: IndexerService.ts
electron-app/src/renderer/services/tfjs/: AudioBridge.ts  IntentClassifier.ts  MeetingDetector.ts  MeetingTemplateEngine.ts  NotificationRanker.ts  SemanticSearch.ts  TFJSRuntime.ts  TurnDetector.ts  VADService.ts  VoiceRouter.ts  WorkflowMiner.ts  audio-worklet-processor.ts  index.ts
electron-app/src/renderer/stores/: useAiChatStore.ts  useAnalyticsStore.ts  useDictationStore.ts  useEntryStore.ts  useIntentStore.ts  useMeetingStore.ts  useNotesStore.ts  useNotificationStore.ts  useRecordingStore.ts  useSemanticSearchStore.ts  useSettingsIntentStore.ts  useToastStore.ts  useTurnDetectionStore.ts  useWorkflowStore.ts
electron-app/src/renderer/types/: index.ts
electron-app/src/renderer/utils/: prettify-model-id.ts
electron-app/src/renderer/workers/: ml-client.ts  ml-worker.ts  types.ts
electron-app/src/shared/: constants.ts
ideas/: README.md  ambient-context-engine.md  collaborative-transcript-review.md  digest-generation.md  enterprise-lockdown-mode.md  live-coaching-and-communication-analytics.md  multi-device-mesh.md  multilingual-translation.md  offline-meeting-copilot.md  organizational-voice-intelligence.md  programmable-voice-macros.md  speaker-separation-and-voice-identity.md  voice-accessibility-layer.md  voice-driven-workspace-automation.md  voice-fingerprint-security.md  voice-journal-sentiment-tracking.md  voice-to-structured-data.md
rust-core/: Cargo.toml  build.rs
rust-core/src/: error.rs  lib.rs
rust-core/src/audio/: capture.rs
rust-core/src/clipboard/: html.rs  mod.rs
rust-core/src/export/: formatter.rs
rust-core/src/hotkey/: listener.rs
rust-core/src/llm/: chat.rs  cleanup.rs  mod.rs  prompts.rs  topic_classifier.rs  v4_template_prompts.rs
rust-core/src/rag/: chunker.rs  intent.rs  mod.rs  prompts.rs
rust-core/src/storage/: actions.rs  ai_chat.rs  analytics.rs  chunks.rs  db.rs  embeddings.rs  entries.rs  intents.rs  meeting_templates.rs  meetings.rs  ml_models.rs  mod.rs  notifications.rs  transcript_segments.rs  user_notes.rs  vad.rs  workflows.rs
rust-core/src/transcription/: dictionary.rs  engine.rs  whisper.rs
rust-core/src/tts/: kokoro.rs  mod.rs  playback.rs
rust-core/tests/: storage_tests.rs
scripts/: build-rust.ps1  build-rust.sh  dev.sh
