[package]
name = "ironmic-core"
version = "1.3.1"
edition = "2021"
description = "IronMic – fully-local voice transcription and text-to-speech, Rust native core"
authors = ["IronMic Contributors"]
license = "MIT"
repository = "https://github.com/greenpioneersolutions/IronMic"

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = []
napi-export = ["dep:napi", "dep:napi-derive", "dep:napi-build"]
whisper = ["dep:whisper-rs"]
metal = ["whisper", "whisper-rs/metal"]
llm = ["dep:llama-cpp-2"]
llm-bin = ["dep:llama-cpp-2"]
tts = ["dep:ort", "dep:ndarray"]

[[bin]]
name = "ironmic-llm"
path = "src/bin/ironmic_llm.rs"
required-features = ["llm-bin"]

[dependencies]
napi = { version = "2", features = ["napi9", "async"], optional = true }
napi-derive = { version = "2", optional = true }
cpal = "0.15"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rubato = "0.16"
rusqlite = { version = "0.31", features = ["bundled"] }
arboard = "3"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
whisper-rs = { version = "0.13", optional = true }
llama-cpp-2 = { version = "0.1", optional = true }
ort = { version = "2.0.0-rc.12", optional = true, features = ["ndarray"] }
ndarray = { version = "0.17", optional = true }

[build-dependencies]
napi-build = { version = "2", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }

[profile.release]
lto = true
strip = true
