[package]
name = "ironmic-core"
version = "1.7.4"
edition = "2021"
description = "IronMic – fully-local voice transcription and text-to-speech, Rust native core"
authors = ["IronMic Contributors"]
license = "MIT"
repository = "https://github.com/greenpioneersolutions/IronMic"

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = []
napi-export = ["dep:napi", "dep:napi-derive", "dep:napi-build"]
whisper = ["dep:whisper-rs"]
metal = ["whisper", "whisper-rs/metal"]
llm = ["dep:llama-cpp-2"]
llm-bin = ["dep:llama-cpp-2"]
tts = ["dep:ort", "dep:ndarray"]
# engine-multi: Moonshine ONNX backend via transcribe-rs.
# Adds the alternative transcription engine that runs on ONNX Runtime's
# MLAS / DirectML kernels — no BLAS dependency, ~16x faster than whisper.cpp
# on a Windows VDI without GPU acceleration. transcribe-rs's "onnx" feature
# pulls in the same `ort = "=2.0.0-rc.12"` and `ndarray = "0.17"` we already
# use for the Kokoro TTS pipeline, so there is no version conflict. We
# deliberately omit transcribe-rs's "whisper-cpp" feature because IronMic
# already links whisper.cpp via the existing `whisper-rs` crate; pulling
# in a second whisper.cpp would create duplicate symbols.
engine-multi = ["dep:transcribe-rs"]
# forge: synthetic keystroke / paste-anywhere support for Forge mode.
# Pulls in `enigo` for cross-platform input simulation. On Linux this requires
# libxdo (X11) at link time; document in CLAUDE.md. macOS additionally needs
# Accessibility permission at runtime — see keystroke::macos.
forge = ["dep:enigo"]

[[bin]]
name = "ironmic-llm"
path = "src/bin/ironmic_llm.rs"
required-features = ["llm-bin"]

[dependencies]
napi = { version = "2", features = ["napi9", "async"], optional = true }
napi-derive = { version = "2", optional = true }
cpal = "0.15"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rubato = "0.16"
rusqlite = { version = "0.31", features = ["bundled"] }
arboard = "3"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
whisper-rs = { version = "0.13", optional = true }
llama-cpp-2 = { version = "0.1", optional = true }
ort = { version = "2.0.0-rc.12", optional = true, features = ["ndarray"] }
ndarray = { version = "0.17", optional = true }
transcribe-rs = { version = "0.3", features = ["onnx"], optional = true }
enigo = { version = "0.6", optional = true }

[build-dependencies]
napi-build = { version = "2", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }

[profile.release]
lto = true
strip = true
